# IviewSlint

./: Cargo.toml  LICENSE  README.md  build.rs
src/: colors.rs  exif_my.rs  file_callbacks.rs  file_handlers.rs  gpu_colors.rs  image_processing.rs  main.rs  pf32.rs  shaders.wgsl
src/ui/: main.slint
