[package]
name = "iviewslint"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = { version = "1.14.1", features = ["renderer-femtovg", "backend-winit"] }
arboard = "3.4"
bmp = "0.5.0"
image = { version = "0.25", features = ["jpeg", "png", "webp", "tiff"] }
kamadak-exif = "0.6.1"
rfd = "0.17.2"
winres = "0.1"
webp = "0.3"
webbrowser = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "6.0" # 2026-os stabil verzió
time-format = "1.2.1"
tiff = "0.11.1"
png = "0.18.0"
bytemuck = { version = "1.14", features = ["derive"] }
rayon = "1.10"
chrono = "0.4"
img-parts = "0.4.0"
base64 = "0.22.1"
display-info = "0.5.7"

[build-dependencies]
winres = "0.1"
slint-build = "1.14.1"
